--- a/testeio/testeio.cmp
+++ b/testeio/testeio.cmp
@@ -50,7 +50,6 @@
 			error_sum_6_export              : in    std_logic_vector(31 downto 0) := (others => 'X'); -- export
 			error_sum_7_export              : in    std_logic_vector(31 downto 0) := (others => 'X'); -- export
 			expected_output_0_export        : out   std_logic_vector(31 downto 0);                    -- export
-			expectedoutputs_export          : in    std_logic_vector(31 downto 0) := (others => 'X'); -- export
 			hps_io_hps_io_emac1_inst_TX_CLK : out   std_logic;                                        -- hps_io_emac1_inst_TX_CLK
 			hps_io_hps_io_emac1_inst_TXD0   : out   std_logic;                                        -- hps_io_emac1_inst_TXD0
 			hps_io_hps_io_emac1_inst_TXD1   : out   std_logic;                                        -- hps_io_emac1_inst_TXD1
@@ -86,7 +85,6 @@
 			hps_io_hps_io_uart0_inst_RX     : in    std_logic                     := 'X';             -- hps_io_uart0_inst_RX
 			hps_io_hps_io_uart0_inst_TX     : out   std_logic;                                        -- hps_io_uart0_inst_TX
 			input_sequence_0_export         : out   std_logic_vector(31 downto 0);                    -- export
-			inputsequences_export           : in    std_logic_vector(31 downto 0) := (others => 'X'); -- export
 			mem_s2_address                  : in    std_logic_vector(14 downto 0) := (others => 'X'); -- address
 			mem_s2_chipselect               : in    std_logic                     := 'X';             -- chipselect
 			mem_s2_clken                    : in    std_logic                     := 'X';             -- clken
@@ -116,9 +114,8 @@
 			reset_reset_n                   : in    std_logic                     := 'X';             -- reset_n
 			sequences_to_process_export     : out   std_logic_vector(31 downto 0);                    -- export
 			start_processing_chrom_export   : out   std_logic;                                        -- export
-			startcomm_export                : out   std_logic_vector(31 downto 0);                    -- export
+			sampleindex_export              : out   std_logic_vector(31 downto 0);                    -- export
 			valid_output_0_export           : out   std_logic_vector(31 downto 0);                    -- export
-			validoutputs_export             : in    std_logic_vector(31 downto 0) := (others => 'X'); -- export
 			writesample_export              : out   std_logic_vector(31 downto 0)                     -- export
 		);
 	end component testeio;
